--- a/WebApp/Views/Shared/_Layout.cshtml
+++ b/WebApp/Views/Shared/_Layout.cshtml
@@ -46,7 +46,7 @@
 
         </nav>
     </header>
-    <div class="container text--primary">
+    <div class="container text--primary page--content">
         <main role="main" class="pb-3">
             @RenderBody()
         </main>
