--- a/WebApp/Views/Authentication/RegisterSuccess.cshtml
+++ b/WebApp/Views/Authentication/RegisterSuccess.cshtml
@@ -1,5 +1,5 @@
 ﻿﻿@{
-    ViewData["Title"] = "dupa";
+    ViewData["Title"] = "Register";
 }
 
 <!DOCTYPE html>
@@ -11,7 +11,6 @@
 </head>
 <body>
 
-    <hr />
     <div class="row">
         <div class="col-md-4">
             @WebApp.Resources.Authentication.Localization.RegistrationSucces
