--- a/WebApp/Views/Authentication/ResetPassword.cshtml
+++ b/WebApp/Views/Authentication/ResetPassword.cshtml
@@ -12,31 +12,29 @@
     <title>Reset password</title>
 </head>
 <body>
-
+    <div class="form--island">
 <h4>Reset password</h4>
-<hr />
 <div class="row">
-    <div class="col-md-4">
+    
         <form method="post" enctype="multipart/form-data" asp-action="ResetPassword">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <input asp-for="Guid" type="hidden" value="@Model.Guid"/>
-            <div class="form-group">
-                <label class="control-label">@Localization.Password</label>
-                <input asp-for="Password" class="form-control" />
-                <span asp-validation-for="Password" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label class="control-label">@Localization.PasswordVerification</label>
-                <input asp-for="PasswordVerification" class="form-control" />
-                <span asp-validation-for="PasswordVerification" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <input type="submit" value="Register" class="btn btn-primary" />
-            </div>
+                <div class="form--group--with--warning">
+                    <label class="control-label form--label">@Localization.Password</label>
+                    <input class="control--input form--input" asp-for="Password" class="form-control" />
+                    <span asp-validation-for="Password" class="text-danger"></span>
+                </div>
+                <div class="form--group--with--warning">
+                    <label class="control-label form--label">@Localization.PasswordVerification</label>
+                    <input class="control--input form--input" asp-for="PasswordVerification" class="form-control" />
+                </div>
+                <div style="margin-top:10px; text-align: end;">
+                    <input type="submit" value="Register" class="button button--primary button--rounded" />
+                </div>
         </form>
-    </div>
+    
 </div>
-
+</div>
 @section Scripts {
     @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
 }
