--- a/WebApp/Views/Authentication/ResetPasswordRequest.cshtml
+++ b/WebApp/Views/Authentication/ResetPasswordRequest.cshtml
@@ -12,17 +12,17 @@
     <title>Reset password</title>
 </head>
 <body>
-    <div style="max-width: 300px; margin: auto;">
+    <div class="form--island">
         <h4>Reset password</h4>
-        <hr />
         <div class="row">
             <div>
                 <form method="post"  action="/Authentication/SendResetPasswordMail">
-                    <div class="form--group" style="margin-bottom:0;">
-                        <input type="text" placeholder="@Auth.Email" class="control--input form--input" id="loginFormMail" name="mail" value="" />
+                    <div class="form--group--with--warning">
+                        <label class="control-label form--label">@Localization.Email</label>
+                        <input class="control--input form--input" class="control--input form--input" name="mail" value="" />
                     </div>
-                    <div class="form-group" style="margin: auto; margin-top: 10px;">
-                        <input type="submit" value="Send mail" class="btn btn-primary" />
+                    <div style="margin-top:10px; text-align: end;">
+                        <input type="submit" value="Register" class="button button--primary button--rounded" />
                     </div>
                 </form>
             </div>
