--- a/WebApp/Views/Authentication/_LoginModal.cshtml
+++ b/WebApp/Views/Authentication/_LoginModal.cshtml
@@ -8,40 +8,37 @@
         </div>
         <div class="modal-body">
         <form id="loginForm" action="/Authentication/Login" method="post" class="form--content">
-                <div class="row">
-                    <div class="form--group" style="margin-bottom:0;">
-                        <input type="text" placeholder="@Auth.Email" class="control--input form--input" id="loginFormMail" name="mail" value="" />
-                    </div>
-                    <div class="form--group">
-                        <input type="password" placeholder="@Auth.Password" class="control--input form--input" id="loginFormPassword" name="password" value="" />
-                    </div>
-                        <input type="hidden" id="loginFormReturnUrl" name="url"/>
-                        <div id="loginFormMessage" class="text-danger" style="display:none;">@Auth.WrongCredentials</div>
+            <div class="row">
+                <div class="form--group">
+                    <input type="text" placeholder="@Auth.Email" class="control--input form--input" id="loginFormMail" name="mail" value="" />
                 </div>
+                <div class="form--group--with--warning">
+                    <input type="password" placeholder="@Auth.Password" class="control--input form--input" id="loginFormPassword" name="password" value="" />
+                    <span id="loginFormMessage" class="text-danger" >
+                    </span>
+                    
+                </div>
+                <input type="hidden" id="loginFormReturnUrl" name="url"/>
+            </div>
             <div style="display: flex; justify-content: flex-end;">
-                
-                @*
-
-                <input style="margin-right: 10px;"  type="submit" value="Reset password" formaction="/Authentication/SendResetPasswordMail" />
-                *@
                 <a style="margin-right: 10px;" class="button button--secondary button--rounded button--no-border button--thin" asp-area="" asp-controller="Authentication" asp-action="SendResetPasswordMail">Reset password</a>
                 <button class="button button--primary button--rounded button--thin" type="submit">@Auth.Login</button>
             </div>
         </form>
-            <div style="width: 100%; text-align: center;">
-                - or -
-            </div>
+        <div style="width: 100%; text-align: center;">
+            - or -
+        </div>
         <form id="secondForm" action="/Authentication" method="post" class="form--content">
             <input type="hidden" id="CurrentUrl" name="url" />
             <input type="hidden" id="secondFormMail" name="mail" />
-            <div class="form--heading" style="display:flex; justify-content: space-between; flex-direction: column;">
+                <div class="form--heading" style="display:flex; justify-content: space-between; flex-direction: column; margin-top: -15px;">
                 <div class="form--group">
                     <button class="button button--google button--rounded" type="submit" value="Google" formaction="/Authentication/LoginGoogle">
                         <img style="margin: -9px 0 -4px 0;" src="~/image/icon_google.svg" width="30" height="30" />
                         Google
                     </button>
                 </div>
-                <div class="">
+                <div>
                     <button class="button button--facebook button--rounded " type="submit" value="Facebook" formaction="/Authentication/LoginFacebook">
                         <img style="margin: -9px 0 -4px 0;" src="~/image/icon_facebook.svg" width="30" height="30"/>
                         Facebook
@@ -60,7 +57,8 @@
 
 <script>
     $( "#loginForm" ).submit(function( event ) {
-        $("#loginFormMessage").hide();
+        event.preventDefault();
+        $("#loginFormMessage").text("");
         $("#loginFormReturnUrl").val(window.location.toString());
         $.post("@Url.Action("ValidateCrenedtials","Authentication")",
             {
@@ -69,7 +67,7 @@
             },
             function (data) {
                 if (!data.valid) {
-                    $("#loginFormMessage").show();
+                    $("#loginFormMessage").text("@Auth.WrongCredentials");
                 } else {
                      $( "#loginForm" ).unbind('submit').submit()
                 }
