--- a/WebApp/Views/Shared/_Layout.cshtml
+++ b/WebApp/Views/Shared/_Layout.cshtml
@@ -21,7 +21,7 @@
             </div>
             <div class="header--right">
                 @if(Context.User.Claims.Any()){
-                    <a asp-action="Details" asp-controller="Users" asp-route-id="@Context.User.Claims.FirstOrDefault(c => c.Type.ToLower().Contains("userid")).Value">
+                    <a asp-action="EditProfile" asp-controller="Users">
                         <div class="username--box text--primary background--primary border--primary">
                             <span>@Context.User.Claims.FirstOrDefault(c => c.Type.ToLower().Contains("name")).Value</span>
                             <button class="round--svg--button text--primary background--primary border--primary">
@@ -63,7 +63,7 @@
             </h2>
         </div>
         <div>
-			&copy; 2022 - PortalAukcyjny - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
+			&copy; 2022 - PortalAukcyjny
 		</div>
 		<div>
 			<ul class="navbar-nav flex-grow-1 loginSection">
