--- a/WebApp/wwwroot/css/shared.css
+++ b/WebApp/wwwroot/css/shared.css
@@ -95,6 +95,14 @@
   margin-right: 10px;
 }
 
+.form--island {
+  max-width: 300px;
+  margin: auto;
+  border-radius: 16px;
+  padding: 10px;
+  box-shadow: 0 0 20px 0px #00000080;
+}
+
 .form--container {
   padding: 1vh 1vw;
   margin-top: 0.6vh;
@@ -104,17 +112,21 @@
   text-align: center;
 }
 
-.form--group {
+.form--group, .form--group--with--warning {
   width: 100%;
   margin-top: 2vh;
   margin-bottom: 2vh;
 }
-.form--group .form--label {
-  width: 33%;
-  display: inline-flex;
-  margin-left: 0px;
+.form--group--with--warning, .form--group--with--warning--with--warning {
+  margin-top: 0;
+  margin-bottom: 0;
 }
-.form--group .form--input {
+.form--group .form--label, .form--group--with--warning .form--label {
+  width: 70%;
+  display: inline-flex;
+  margin-left: 16px;
+}
+.form--group .form--input, .form--group--with--warning .form--input {
   width: 100%;
   display: inline-flex;
   margin-right: 0px;
@@ -131,7 +143,7 @@
   border-radius: 100px;
   transition: border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
 }
-.form--group .form--select {
+.form--group .form--select, .form--group--with--warning .form--select {
   display: inline-flex;
   width: 66%;
   padding: 0.375rem 0.75rem;
@@ -148,7 +160,7 @@
   border-radius: 0.25rem;
   transition: border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
 }
-.form--group .input--checkbox {
+.form--group .input--checkbox, .form--group--with--warning .input--checkbox {
   margin-top: 0.8vh;
 }
 
@@ -519,7 +531,7 @@ input[type=file] {
 
 nav {
   padding-top: 2vh;
-  box-shadow: 1px 10px 20px #000000;
+  box-shadow: 0px 5px 14px 0px #00000080;
 }
 
 .filter--panel {
@@ -582,4 +594,8 @@ nav {
 .page--content {
   min-height: 75vh;
   padding-top: 3vh;
+}
+
+.text-danger {
+  display: inline-block;
 }
