--- a/WebApp/wwwroot/css/shared.css
+++ b/WebApp/wwwroot/css/shared.css
@@ -354,3 +354,240 @@ input[type=file] {
   text-decoration: none;
   color: none;
 }
+
+.fake--dropdown {
+  display: flex;
+  flex-direction: column;
+  width: 52px;
+  position: absolute;
+  margin-left: 1vw;
+}
+.fake--dropdown button {
+  margin-bottom: 0;
+  margin-top: 0;
+  border: 0;
+  width: 50px;
+  aspect-ratio: 1/1;
+  border-left: 1px solid;
+  border-right: 1px solid;
+}
+.fake--dropdown button:hover {
+  opacity: 50%;
+}
+.fake--dropdown button:last-child {
+  border: 1px solid;
+  border-radius: 0 0 50% 50%;
+  border-top: 0px;
+}
+
+.theme--form {
+  margin-right: 2vw;
+}
+
+.round--svg--button {
+  margin-bottom: 0;
+  margin-top: 0;
+  border: 1px solid;
+  text-align: center;
+  width: 50px;
+  border-radius: 50%;
+  aspect-ratio: 1/1;
+  margin-left: 1vw;
+}
+.round--svg--button:hover {
+  opacity: 50%;
+}
+
+.username--box {
+  width: 15vw;
+  height: 50px;
+  border: 1px solid;
+  padding-right: 0px;
+  border-radius: 50px/60px;
+  border-right: 0px;
+  text-align: center;
+  min-width: 150px;
+}
+.username--box span {
+  display: inline-block;
+  vertical-align: middle;
+  line-height: 50px;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  height: inherit;
+  width: 60%;
+}
+.username--box a {
+  text-decoration: none;
+}
+.username--box .round--svg--button {
+  margin-right: -1px;
+  margin-top: -1px;
+  float: right;
+}
+.username--box .round--svg--button:focus-visible {
+  outline-offset: unset;
+  outline: unset;
+}
+
+.header--navigation {
+  display: flex;
+  flex-wrap: wrap;
+}
+.header--right {
+  flex: 3;
+  display: flex;
+  align-content: end;
+  margin-bottom: 2vh;
+}
+.header--searchbar {
+  min-width: 450px;
+  flex: 8;
+  align-content: center;
+  justify-content: center;
+  margin-bottom: 2vh;
+}
+.header--searchbar--input {
+  height: 50px;
+  width: 100%;
+  min-width: 200px;
+  margin-right: 0px;
+  border-radius: 50px 0px 0px 50px;
+  padding-left: 15px;
+  padding-right: 15px;
+  border: 1px solid;
+}
+.header--searchbar--input:focus-visible {
+  outline-offset: unset;
+  outline: unset;
+}
+.header--searchbar--select {
+  height: 50px;
+  width: 20%;
+  min-width: 100px;
+  margin-left: 0px;
+  padding-left: 15px;
+  padding-right: 15px;
+  border: 1px solid;
+  margin-right: 0px;
+}
+.header--searchbar--select:focus-visible {
+  outline-offset: unset;
+  outline: unset;
+}
+.header--searchbar--button {
+  height: 50px;
+  width: 5%;
+  min-width: 50px;
+  border-radius: 0px 50px 50px 0px;
+  margin-left: 0px;
+  border: 1px solid;
+}
+.header--searchbar--form {
+  width: 100%;
+  height: 50px;
+  align-content: center;
+  display: flex;
+  justify-content: center;
+}
+.header--searchbar--group {
+  height: 50px;
+  width: 50%;
+  min-width: 200px;
+  margin-right: 0px;
+  position: relative;
+}
+.header--searchbar--box {
+  border: 1px solid;
+  border-radius: 0px 0px 50px 50px;
+  position: absolute;
+  width: 100%;
+  padding-left: 15px;
+  padding-right: 15px;
+  border-top: 0px;
+  display: none;
+}
+.header--searchbar--box p {
+  line-height: 50px;
+}
+.header--searchbar--box p:hover {
+  opacity: 70%;
+}
+.header--logo {
+  flex: 2;
+  text-align: center;
+  height: 50px;
+  margin-left: 5px;
+  margin-bottom: 2vh;
+}
+.header--logo a {
+  margin-right: 0px;
+  padding-top: 50%;
+}
+
+nav {
+  padding-top: 2vh;
+  box-shadow: 1px 10px 20px #000000;
+}
+
+.filter--panel {
+  display: flex;
+  flex-basis: 100%;
+  margin-top: 2vh;
+}
+.filter--select {
+  border: 1px solid;
+  border-radius: 25px;
+  margin-left: 2vw;
+  width: 30%;
+}
+.filter--price {
+  border: 1px solid;
+  border-radius: 25px;
+  display: flex;
+  margin-left: 2vw;
+  margin-right: 2vw;
+}
+.filter--price--title {
+  margin-right: 0px;
+  border-radius: 25px 0px 0px 25px;
+  display: inline-block;
+  vertical-align: middle;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  height: inherit;
+  width: 20%;
+  text-align: center;
+}
+.filter--price--from {
+  border-left: 1px solid;
+  border-right: 1px solid;
+  border-top: 0px;
+  border-bottom: 0px;
+  margin-left: 0px;
+  margin-right: 0px;
+  width: 40%;
+}
+.filter--price--to {
+  margin-left: 0px;
+  border: 0px;
+  border-radius: 0px 25px 25px 0px;
+  width: 40%;
+}
+
+@media only screen and (max-width: 885px) {
+  .header--logo {
+    order: 1;
+  }
+  .header--searchbar {
+    order: 3;
+  }
+  .header--right {
+    order: 2;
+    justify-content: flex-end;
+  }
+}
+.page--content {
+  min-height: 75vh;
+  padding-top: 3vh;
+}
