--- a/WebApp/wwwroot/Styles/shared.scss
+++ b/WebApp/wwwroot/Styles/shared.scss
@@ -738,14 +738,14 @@ input[type=file] {
 }
 
 /* Fading animation */
-.fade {
+.slider--fade {
     animation-name: fade;
     animation-duration: 1.5s;
     animation-iteration-count: 1;
     animation-fill-mode: forwards;
 }
 
-@keyframes fade {
+@keyframes slider-fade {
     0% {
         opacity: 0
     }
