--- a/WebApp/Views/Products/Create.cshtml
+++ b/WebApp/Views/Products/Create.cshtml
@@ -3,56 +3,16 @@
 @{
     ViewData["Title"] = "";
 }
-    <script type="text/javascript">
-        
-        
-        function GetDynamicTextbox(value) {
-
-        return '<div class="select--image--with--description">' + 
-            '<label class="select--file border--primary" >' +
-            '<span class="select--file--header" > Select File </span>' +
-            '<span class="select--file--name" ></span>' +
-            '<input type="file" name="postedFiles" id="postedFile" onchange="insertFileName(event)">' +
-            '</label>' +
-            '<div class="input--button--group">' +
-            '<input type="text" name="fileDescription" class="control--input desc--input" placeholder="File description"/>' +
-            '<button type="button" class="button button--primary button--rounded" onclick="RemoveFile(this)">Remove File</button>' +
-            '</div>' +
-            '</div>';
-        }
-
-
-        function AddNewFile() {
-
-            var div = document.createElement('DIV');
-
-            div.innerHTML = GetDynamicTextbox("");
-
-            if(document.getElementById("files").innerHTML == ""){
-                document.getElementById("files").innerHTML = "<h3>Additional files:</h3>";
-            }
-
-            document.getElementById("files").appendChild(div);
-        }
-
-        function RemoveFile(div) {
-
-            document.getElementById("files").removeChild(div.parentNode.parentNode.parentNode);
-            if(document.getElementById("files").innerHTML == "<h3>Additional files:</h3>"){
-                document.getElementById("files").innerHTML = "";
-            }
-        }
-
-    </script>
-
+    
 <div class="form--container container">
 <div class="form--heading">
     <h3 class="text--secondary">Add Product</h3>
 </div>
 <div class="row">
+
 <div class="col-md-3 col-0"></div>
     <div class="col-md-6">
-        <form method="post" enctype="multipart/form-data" asp-action="Create" class="form--content">
+        <form asp-action="Create" class="form--content">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
 
             <div>
@@ -68,6 +28,7 @@
                         <input asp-for="Name" class="control--input form--input" />
                 <span asp-validation-for="Name" class="text-danger"></span>
             </div>
+            
             <div class="form--group">
                 <label asp-for="VatRate" class="control--label form--label"></label>
                         <input asp-for="VatRate" class="control--input form--input" />
@@ -76,37 +37,13 @@
                         <input class="form-check-input " asp-for="IsVatExcluded" /> @Html.DisplayNameFor(model => model.IsVatExcluded)
                     </label>
             </div>
-            <div class="form--bottom--container">               
-                <div class="select--image--container">
-                    <label class="select--file border--primary">
-                        <span class="select--file--header">Select Icon</span>
-                        <span class="select--file--name"></span>
-                            <input type="file" name="productIcon" onchange="insertFileName(event)"/>
-                    </label>
-                </div>
-
-
-                <div class="select--image--container">
-                    <label class="select--file border--primary">
-                        <span class="select--file--header">Select Image</span>
-                        <span class="select--file--name"></span>
-                        <input type="file" name="productImage" onchange="insertFileName(event)" />
-                    </label>
-                </div>
-
+            
                     <div class="form--buttons">
-                        <button type="button" class="button button--secondary button--rounded" onclick="AddNewFile()">Add additional File</button>
                         <input type="submit" value="Create" class="button button--rounded button--secondary" />
                         <a asp-action="Index" class="button button--rounded button--secondary">Back to List</a>
                     </div>
-            </div>
 
             <div class="clear"></div>
-
-            <div id="files"></div>
-                
-            <br />
-
             
         </form>
             <div class="col-md-3 col-0"></div>      
@@ -117,28 +54,3 @@
 @section Scripts {
     @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
 }
-
-
-<script>
-    function insertFileName(event){
-        var par = $(event.target.parentNode);
-        var span = $(par.children("span.select--file--name"));
-        var filePath = event.target.value;
-            var headerSpan = $(par.children("span.select--file--header"));
-        if(filePath != null){
-
-            filePath = filePath.replace('/', '\\');
-            var parts = filePath.split('\\');
-            var fileName = parts[parts.length - 1];
-            span.html(fileName);
-            span.css("display", "block");
-
-        }
-        else{
-            span.html("");
-                span.css("display", "none");
-            headerSpan.css("width", "100%");
-        }
-        console.log(span.InnerHtml);
-    }
-</script>
