--- a/WebApp/Views/Chat/Index.cshtml
+++ b/WebApp/Views/Chat/Index.cshtml
@@ -1,11 +1,11 @@
 ﻿@model WebApp.Models.DTO.ChatModel
 
 @{
-    ViewData["Title"] = "";
+    ViewData["Title"] = "Chat";
 }
 
 @{
-    var currentUserId=1;
+    var currentUserId= int.Parse(Context.User.Claims.FirstOrDefault(c => c.Type.ToLower().Contains("userid")).Value.ToString().ToString().ToString());
 }
 
 <!DOCTYPE html>
@@ -13,15 +13,13 @@
 <html>
 <head>
     <meta name="viewport" content="width=device-width" />
-    <title>Index</title>
+    <title>Chat</title>
 </head>
 <body>
-
     <div style="height: 640px; display: flex;">
         <div class="form--island" style="width:30%; height:100%; display: inline-block; max-width: unset;">
             <div style="width:100%; height:100%; overflow-y: scroll; padding-right: 2px; padding-right: 0;">
             @foreach(var headline in Model.directMessagesHeadlines){
-                //TODO user id
                 var otherUser = headline.SenderId == currentUserId ? headline.Receiver : headline.Sender;
 
                     <a href="chat?id=@otherUser.UserId" style="text-decoration: none;" class="text--primary">
@@ -47,13 +45,12 @@
         </div>
         
         <div class="form--island" style="width:65%; height:100%; display: inline-block; max-width: unset;">
-            <div style="width:100%; height:75%; overflow-y: scroll; padding-right: 2px;border-radius: 9px; box-shadow: inset 0 0 8px 0px #00000080;padding: 8px;">
-                @foreach (var headline in Model.directMessagesHeadlines)
+            <div id="chat" style="width:100%; height:75%; overflow-y: scroll; padding-right: 2px;border-radius: 9px; box-shadow: inset 0 0 8px 0px #00000080;padding: 8px;">
+                @foreach (var headline in Model.directMessages)
                 {
-                    //TODO user id
                     var otherUser = headline.SenderId == currentUserId ? headline.Receiver : headline.Sender;
 
-                    <div style="display: flex; justify-content: @(headline.SenderId == currentUserId ? "flex-start" : "flex-end");">
+                    <div style="display: flex; justify-content: @(headline.SenderId == currentUserId ? "flex-end" : "flex-start");">
                         <div style="max-width: 380px; background-color: #00000030; border-radius:5px;padding:5px">
                             <div>
                                 @headline.Message
@@ -65,27 +62,32 @@
                                 <span>
                                     @headline.SentTime.ToString()
                                 </span>
-                                </div>
                             </div>
+                        </div>
                     </div>
-                    
                     <div style="height:5px;">
-
                     </div>
-
                 }
             </div>
             <div style="height:2%;"></div>
             <div style="width:100%; height:23%; border-radius: 9px; box-shadow: inset 0 0 8px 0px #00000080;">
-                <form style="display: flex;align-content: stretch;align-items: stretch;justify-content: space-around;flex-direction: row;">
-
-                    <textarea type="text" id="fname" name="fname" style="background: transparent;border: none;width: -webkit-fill-available;color: white;height: 140px;border-radius: 9px 0px 0px 9px;resize: none;"></textarea>
-                    <button class="button button--primary button--rounded button--thin" style="height: auto; border-radius: 0px 9px 9px 0px;" type="submit">TEXT</button>
-
+                <form action="/Chat/Send" method="post" style="display: flex;align-content: stretch;align-items: stretch;justify-content: space-around;flex-direction: row;">
+                    <input type="hidden" id="id" name="id" value="@Model.Id"/>
+                    <textarea type="text" id="message" name="message" style="background: transparent;border: none;width: -webkit-fill-available;color: white;height: 140px;border-radius: 9px 0px 0px 9px;resize: none;"></textarea>
+                    <button class="button button--primary button--rounded button--thin" style="height: auto; border-radius: 0px 9px 9px 0px;" type="submit">Send</button>
                 </form>
+                <script>
+                    var objDiv = document.getElementById("chat");
+                    objDiv.scrollTop = objDiv.scrollHeight;
+                    $("#textareaId").keypress(function (e) {
+                        if(e.which === 13 && !e.shiftKey) {
+                            e.preventDefault(); 
+                            $(this).closest("form").submit();
+                        }
+                    });
+                </script>
             </div>
         </div>
     </div>
-
 </body>
 </html>
