--- a/WebApp/Views/Home/Index.cshtml
+++ b/WebApp/Views/Home/Index.cshtml
@@ -96,7 +96,7 @@
 
 
                         <div class="box box-vertical">
-                            <a asp-action="Details" asp-controller="Auctions" asp-route-id="@auctions[j].Auction.AuctionId">
+                            <a asp-action="Auction" asp-controller="Auctions" asp-route-id="@auctions[j].Auction.AuctionId">
 
                                 <div class="box--content">
                                     <div class="box--item">
