--- a/WebApp/wwwroot/Styles/shared.scss
+++ b/WebApp/wwwroot/Styles/shared.scss
@@ -1039,6 +1039,34 @@ nav {
         }
 
     }
+
+    .auction {
+        &--single {
+            display:unset!important;
+            margin-bottom: 3vh!important;
+        }
+
+        &--left--panel {
+            
+            margin-right: 2vw;
+        }
+
+        &--right--panel {
+            
+            margin-left: 2vw;
+        }
+    }
+
+    .add {
+
+        &--bid--button {
+            width: 100%;
+            height: 50%;
+            font-size: x-large;
+            padding-top:0;
+        }
+    }
+
 }
 
 .page--content{
@@ -1048,4 +1076,175 @@ nav {
 
 .text-danger{
     display: inline-block;
+}
+
+
+.auction {
+    &--single {
+        display: flex;
+        flex-direction: row;
+        margin-bottom: 5vh;
+    }
+
+    &--left--panel {
+        flex: 3;
+        margin-right: 2vw;
+    }
+
+    &--right--panel {
+        flex: 2;
+        margin-left: 2vw;
+    }
+
+    &--description {
+        text-align: justify;
+        padding: 0 1.5vw;
+    }
+
+    &--border {
+        border: 1px solid;
+        border-radius: 15px;
+    }
+
+    &--new--question {
+        width: 50%;
+        aspect-ratio: 15 / 4;
+        resize: none;
+        border-radius: 15px 0px 0px 15px;
+
+        &:focus-visible {
+            outline-offset: unset;
+            outline: unset;
+        }
+    }
+
+
+
+    &--add--bid {
+        width: 100%;
+        aspect-ratio: 4/1;
+        margin-top: 5vh;
+    }
+
+    &--bid {
+        padding-left: 1.5vw;
+        padding-right: 1.5vw;
+        display: flex;
+        flex-wrap: wrap;
+
+        h5 {
+            flex: 3;
+            padding-right: 1.5vw;
+        }
+
+        h3 {
+            flex: 1;
+            text-align: end;
+        }
+
+        p {
+            flex: 0 0 100%;
+            margin-bottom: 0;
+            margin-top: 1rem;
+        }
+
+        hr {
+            margin-top: 0;
+            flex: 0 0 100%;
+        }
+
+        &--popup{
+            display: none;
+            border: 1px solid;
+            border-top: 0px;
+            border-radius: 0px 0px 15px 15px;
+            padding: 2.5vh 1.5vw;
+        }
+
+        &s--list{
+            min-height: 60vh;
+            max-height: 60vh;
+            overflow-y: scroll;
+        }
+    }
+}
+
+.subsection--title{
+    padding-left: 2vw;
+}
+
+.add {
+    &--question {
+        display: flex;
+        justify-content: center;
+        flex-wrap: wrap;
+
+        &--button {
+            width: 7%;
+            border-radius: 0px 15px 15px 0px;
+            border-left: 0px;
+
+            svg {
+                width: 100%;
+                aspect-ratio: 1 / 1;
+            }
+        }
+    }
+
+    &--bid--button {
+        width: 100%;
+        height: 50%;
+        font-size: x-large;
+
+        svg {
+            height: 100%;
+            aspect-ratio: 1 / 1;
+        }
+    }
+}
+
+.questions--container{
+    margin-top: 5vh;
+    margin-left: 2vw;
+    margin-right: 2vw;
+
+    .question{
+        
+        &--single{
+            h5{
+                margin-bottom: 1.5vh;
+            }
+
+            p{
+                text-align: justify;
+            }
+        }
+
+        &--time{
+            display: inline;
+        }
+
+        &--respond{
+            display: inline;
+            margin-left: 0.5vw;
+            text-decoration: underline;
+            cursor: pointer;
+
+            &:hover{
+                opacity: 70%;
+            }
+        }
+
+        &--response{
+            padding-left: 2.5vw;
+            padding-right: 2.5vw;
+        }
+    }
+
+}
+
+.error--span{
+    flex: 0 0 100%;
+    text-align: center;
+    padding-bottom: 1.5vh;
 }
